# gwYAML

./: .gitignore  cmake_build.sh  cmake_gcc_build.bat  cmake_vs_build.bat
cmake/: macros.cmake
source/: CMakeLists.txt  Test.cpp  gwYAML.cpp  gwYAML.h
